--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -14,7 +14,7 @@
 }
 .register__terms {
   font-size: .8rem;
-  color: #94a3b8;
+  color: var(--text);
   line-height: 1.4;
   margin-bottom: 1rem;
 }
